# alandra

./: .gitignore  README.md  app.py  pyproject.toml  tracked_user.py
.github/workflows/: main_alandra.yml
server/: config.py  data_filter.py  data_stream.py  database.py
server/algos/: __init__.py  alandra.py
